--- a/style.css
+++ b/style.css
@@ -316,3 +316,19 @@ input[type='submit'] {
 input[type='submit']:hover {
   background-color: #4095c6;
 }
+
+.social-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 2em 0 0;
+  padding: 0;
+}
+
+.social-list__item {
+  margin: 0 0.5em;
+}
+
+.social-list__item a:hover {
+  opacity: 0.7;
+}
